# token-acl

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  srfc37.md
.github/workflows/: publish-packages.yml  rust-publish.yml
clients/cli/: Cargo.toml
clients/cli/src/: main.rs
clients/js/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
clients/js/src/: helpers.ts  index.ts  metadata.ts
clients/js/src/tlv-account-resolution/: errors.ts  index.ts  pubkeyData.ts  seeds.ts  state.ts
clients/js/test/: tlvAccountResolution.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs  metadata.rs
clients/rust/tests/: basic.rs  create_config.rs  freeze_permissionless.rs  program_test.rs  thaw_permissionless.rs
examples/always-allow/: Cargo.toml
examples/always-allow-with-deps/: Cargo.toml
examples/always-allow-with-deps/src/: lib.rs
examples/always-allow-with-deps/src/instructions/: can_thaw_freeze_permissionless.rs  initialize_extra_metas.rs  mod.rs
examples/always-allow/src/: lib.rs
examples/always-allow/src/instructions/: initialize_extra_metas.rs
examples/always-block/: Cargo.toml
examples/always-block/src/: lib.rs
examples/always-block/src/instructions/: initialize_extra_metas.rs  mod.rs
interface/: Cargo.toml
interface/src/: error.rs  instruction.rs  lib.rs  offchain.rs  onchain.rs
program/: Cargo.toml  idl.json
program/src/: error.rs  instruction.rs  lib.rs  offchain.rs  state.rs
program/src/instructions/: create_config.rs  delete_config.rs  forfeit_freeze_authority.rs  freeze.rs  freeze_permissionless.rs  freeze_permissionless_idempotent.rs  mod.rs  set_authority.rs  set_gating_program.rs  thaw.rs  thaw_permissionless.rs  thaw_permissionless_idempotent.rs  toggle_permissionless_instructions.rs
scripts/: generate-clients.mjs  solana.dic  spellcheck.toml  start-validator.mjs  utils.mjs
scripts/rust/: build-sbf.mjs  build.mjs  format.mjs  lint.mjs  test-sbf.mjs
