[workspace]
resolver = "2"
members = [
  "clients/cli",
  "clients/rust",
  "interface",
  "examples/always-allow",
  "examples/always-block",
  "examples/always-allow-with-deps",
  "program",
]


[workspace.package]
authors = ["TBD"]
repository = "TBD"
homepage = "TBD"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint", "custom-heap", "custom-panic"))',
]

[workspace.metadata.cli]
solana = "2.2.1"


[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.dependencies]
solana-account-info = "2.3.0"
solana-account = "2.2.1"
solana-cpi = "2.2.1"
solana-decode-error = "2.3.0"
solana-instruction = { version = "=2.3.3", features = ["std"] }
solana-program-error = "2.2.2"
solana-pubkey = { version = "2.3.0", features = ["curve25519", "borsh"] }
solana-program = "2.3.0"
solana-program-option = "2.2.1"
solana-rent = "2.2.1"
solana-system-interface = "1.0.0"
solana-sysvar = "2.3.0"
solana-msg = "2.2.1"
solana-client = "2.3.13"
solana-program-test = "2.3.13"
solana-program-entrypoint = "2.3.0"
solana-program-runtime = "2.3.13"
solana-program-pack = "2.2.1"
spl-discriminator = "0.4.0"
spl-program-error = "0.7.0"
spl-tlv-account-resolution = "0.10.0"
spl-type-length-value = "0.8.0"
spl-pod = "0.5.1"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-sdk = "2.3.1"
spl-associated-token-account-client = "2.0.0"
token-acl-interface = { path = "interface/" }
token-acl-client = { path = "clients/rust/" }
spl-token-client = { version = "0.17.0" }
spl-token-metadata-interface = { version = "0.7.0" }
litesvm = "0.7.1"