[package]
name = "token-acl-interface"
version = "0.1.0"
description = "Interface library for Token ACL account resolution."
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.23.1", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-decode-error = { workspace = true }
solana-instruction = { workspace = true }
solana-msg = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
spl-discriminator = { workspace = true }
spl-program-error = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-type-length-value = { workspace = true }
spl-pod = { workspace = true }
thiserror = "2.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[dev-dependencies]
solana-program = { workspace = true }
tokio = { version = "1.45.1", features = ["full"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]