[package]
name = "ebalts"
version = "0.1.0"
description = "tbd"
documentation = "tbd"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-program = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-token-2022 = { workspace = true }
ebalts-interface = { version = "0.1.0", path = "../interface" }
spl-type-length-value = { workspace = true }

[dev-dependencies]
solana-program-test = "2.2.0"
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]