[package]
name = "token-acl"
version = "0.1.0"
description = "tbd"
documentation = "tbd"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-program = { workspace = true }
solana-rent = { workspace = true }
solana-cpi = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }
solana-msg = { workspace = true }
solana-pubkey = { workspace = true }
solana-program-error = { workspace = true }
solana-program-pack = { workspace = true }
spl-pod = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-token-2022 = { workspace = true }
token-acl-interface = { version = "0.1.0", path = "../interface" }
spl-type-length-value = { workspace = true }
bytemuck = { version = "1.21.0", features = ["derive"] }

[dev-dependencies]
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.solana]
program-id = "81H44JYqk1p8RUks7pNJjhQG4Pj8FcaJeTUxZKN3JfLc"