[package]
name = "token-acl-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.31"
solana-clap-v3-utils = "2.3.13"
solana-cli-config = "2.3.13"
solana-client = { workspace = true }
solana-logger = "2.3.1"
solana-remote-wallet = "2.3.13"
solana-sdk = { workspace = true }
spl-token-client = { workspace = true }
tokio = { version = "1", features = ["full"] }
spl-tlv-account-resolution ={ workspace = true }
spl-transfer-hook-interface = "0.8.2"
token-acl-client = { workspace = true, features = ["fetch"] }
token-acl-interface = { workspace = true }
spl-associated-token-account-client  = { workspace = true }
spl-token-metadata-interface = { workspace = true }
solana-system-interface = { workspace = true }

[[bin]]
name = "token-acl-cli"
path = "src/main.rs"