[package]
name = "ebalts-client"
version = "0.1.0"
description = "tbd"
documentation = "tbd"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = "0.3.9"
bytemuck = { version = "1.23.1", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-decode-error = { workspace = true }
solana-instruction = { workspace = true }
solana-msg = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-program-entrypoint = { workspace = true }
spl-discriminator = { workspace = true }
spl-program-error = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-type-length-value = { workspace = true }
spl-pod = { workspace = true }
thiserror = "2.0"
borsh = "^0.10"
ebalts-interface = { path = "../../interface" }

[dev-dependencies]
litesvm = "0.6.1"
solana-program-runtime = { workspace = true }
solana-instruction = { workspace = true }
solana-sdk = { workspace = true }
spl-token-2022 = { workspace = true }
solana-system-interface = { workspace = true }
spl-associated-token-account-client  = { workspace = true }
tokio = { version = "^1.20", features = ["rt-multi-thread", "macros"] }
solana-compute-budget-interface = "2.2.1"


[lib]
doctest = false
crate-type = ["cdylib", "lib"]

[features]
default = []
serde = []
fetch = []
anchor = []
anchor-idl-build = []