[package]
name = "always-allow-with-deps-gate-program"
version = "0.1.0"
description = "tbd"
documentation = "tbd"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
no-entrypoint = []
test-sbf = []
forbid-additional-mints = []

[dependencies]
arrayref = "0.3.9"
solana-program = { workspace = true }
solana-rent = { workspace = true }
solana-cpi = { workspace = true }
solana-system-interface = { workspace = true }
solana-sysvar = { workspace = true }
solana-program-error = { workspace = true }
spl-discriminator = { workspace = true }
spl-pod = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-token-2022 = { workspace = true }
token-acl-interface = { version = "0.1.0", path = "../../interface" }
spl-type-length-value = { workspace = true }
spl-associated-token-account-client = { workspace = true }
bytemuck = { version = "1.21.0", features = ["derive"] }
solana-msg = { workspace = true }

[dev-dependencies]
solana-sdk = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]